MET-6199 address sonar tech debt part 1