@@ -50,7 +50,7 @@ public class RecordServiceImpl implements RecordService {
     return recordEntities.stream()
             .filter(this::areAllTierValuesNotNullOrEmpty)
             .map(RecordTiersInfoDto::new)
-            .collect(Collectors.toList());
+            .toList();
   }
 
   @Override
@@ -84,20 +84,22 @@ public class RecordServiceImpl implements RecordService {
   }
 
   private void handleUpdateQueryResult(int updatedRecords, String providerId, String europeanaId, Record recordToUpdate){
-    if (updatedRecords == 0) {
-      LOGGER.debug("Duplicated ProviderId: {} | EuropeanaId: {}", providerId, europeanaId);
-      throw new RecordDuplicatedException(
-              String.format("Duplicated record has been found: ProviderId: %s | EuropeanaId: %s", providerId, europeanaId));
-
-    } else if(updatedRecords == -1) {
-      LOGGER.debug("Primary key in record table is corrupted (dataset_id,provider_id,europeana_id)");
-      throw new ServiceException("primary key in record table is corrupted (dataset_id,provider_id,europeana_id)"
-              + ". providerId & europeanaId updated multiple times", null);
-
-    } else {
-      LOGGER.debug("Setting ProviderId: {} | EuropeanaId: {}", providerId, europeanaId);
-      recordToUpdate.setEuropeanaId(europeanaId);
-      recordToUpdate.setProviderId(providerId);
+    switch (updatedRecords) {
+      case 0 -> {
+        LOGGER.debug("Duplicated ProviderId: {} | EuropeanaId: {}", providerId, europeanaId);
+        throw new RecordDuplicatedException(
+            String.format("Duplicated record has been found: ProviderId: %s | EuropeanaId: %s", providerId, europeanaId));
+      }
+      case -1 -> {
+        LOGGER.debug("Primary key in record table is corrupted (dataset_id,provider_id,europeana_id)");
+        throw new ServiceException("primary key in record table is corrupted (dataset_id,provider_id,europeana_id)"
+            + ". providerId & europeanaId updated multiple times", null);
+      }
+      default -> {
+        LOGGER.debug("Setting ProviderId: {} | EuropeanaId: {}", providerId, europeanaId);
+        recordToUpdate.setEuropeanaId(europeanaId);
+        recordToUpdate.setProviderId(providerId);
+      }
     }
   }
 
